[add] 予約リクエストAPI (#454)
* [add] new_mail_template

* Create 083_add_user_reserved_status_to_payment_cf_return_gift.up.sql

* [add] cf_reserve_inupt

* [clean] with_chg

* [add] new_mail_temp

* [update] payment_repo

* [update] chg_entity_name_with_chg

* [add] cf_reserve_request

* [add] mark_as_reserve

* Update payment_command.go

* [update] main_pkg

* Update payment_command.go

* [update] payment_query_repo

* Update 084_add_user_reserved_status_to_payment_cf_return_gift.up.sql

* [clean] payment_cf_return_gift_status

* Update 084_modify_payment_cf_return_gift_status_column.up.sql

* Update review_query.go

* [add] presentational

* [clean]

* Update 084_modify_payment_cf_return_gift_status_column.up.sql

* Update payment_enum.go

* Update swagger.yaml
